force-app/main/default/objects/UGC_Generic_Param__mdt/UGC_Generic_Param__mdt.object-meta.xml
<CustomObject>
    <label>UGC Generic Param</label>
    <pluralLabel>UGC Generic Params</pluralLabel>
</CustomObject>