force-app/main/default/objects/UGC_Generic_Param__mdt/fields/ParamName__c.field-meta.xml
<CustomField>
    <fullName>ParamName__c</fullName>
    <label>ParamName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>