force-app/main/default/objects/UGC_Generic_Param__mdt/fields/ParamValue__c.field-meta.xml
<CustomField>
    <fullName>ParamValue__c</fullName>
    <label>ParamValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>