force-app/main/default/objects/UGC_Generic_Param__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ParamName__c</columns>
    <columns>ParamValue__c</columns>
    <columns>Entite__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>